examples/test/testpolicy11313.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11313
  namespace: namespace257
spec:
  podSelector:
    matchLabels:
      key15: value43
      key49: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value11
          key3: value47
      podSelector:
        matchLabels:
          key17: value12
